--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,4 +1,4 @@
-.layout{
+.layout {
     margin: 0;
     padding: 0;
     background: linear-gradient(120deg, #2980b9, #8e44ad);
@@ -6,14 +6,14 @@
     overflow: hidden;
 }
 
-.layout__header{
-    text-align:center;
+.layout__header {
+    text-align: center;
     background-color: #fff;
     color: black;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
-.form{
+.form {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -30,26 +30,33 @@
     padding-bottom: 28px;
     border-bottom: 1px solid silver;
     font-weight: bold;
-    font-size:28px;
+    font-size: 28px;
 }
 
-.btn{
+.btn {
     margin-right: 20px;
     width: 100px;
     float: right;
     margin-top: 15px;
 }
 
-.input{
-    margin-left:4px;
-    width:350px;
+.input {
+    margin-left: 4px;
+    width: 350px;
 }
 .input__username {
     width: 350px;
 }
-.form__item{
+.form__item {
     margin: 25px;
 }
 
-
-
+.spin {
+    margin: 0 auto;
+    padding-top: 300px;
+    text-align: center;
+    background: linear-gradient(120deg, #2980b9, #8e44ad);
+    border-radius: 4px;
+    width: 100vw;
+    height: 100vh;
+}
